# md-spreadsheet-engine

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: compute_examples.yml
examples/: README.md  budget.md  cross_table.md  invoice.md
examples/cross_document/: inventory.md  summary.md
scripts/: compute_examples.py
src/md_spreadsheet_engine/: engine.py
tests/: conftest.py  test_engine.py
